# vps

./: .gitignore  .gitmodules  Cargo.toml  Config.example.toml  Config.toml  README.md  bacon.toml  flake.nix  justfile  language.toml
.github/workflows/: api.yml  dev.yml  docker.yml  lint_test.yml  publish.yml  rpc.yml  test.yml
.helix/: languages.toml
.sqlx/: query-032410f045300a39dabf3df4bc0545fa89d828d563acda02610d19f0fbd80075.json  query-0e1d1ac9915e4c2c28033f8bfa3daeff6cce4b3b1ec23a55bdd94ecf9fb59eea.json  query-20dc718e10dedb8b309f23a63b819e63f058d4c37d143095372c313c59cec4bc.json  query-24c2e1e4852acc41f4c4b538ff29606a8bccecd90a7ccd17428507781d2dcca3.json  query-2517c5dd1dca76097da4408da1b739f20eb731d2b8c6ff476db65135d29212ba.json  query-25bf2f77638d7cf02226e5f269c71fb274f5ab5a5a9b57a735562a65c2ebeeb9.json  query-3099a8ab8bcf8587a686d938a937bf69cb2dc95f24179e7fb20c7ea3d5be3f14.json  query-33665d391f0c48185031de48fb8a9e042518519a385364317b23f43fff0dc113.json  query-3bad944c94f3071d564afb64c0b72553229164b872a530a8cb9bb7ffa2543783.json  query-660b40fe2de352faf22e718c5a7d268736671e8f2685ed817c6baeeaf6de4648.json  query-6c5ef24dac5a383b7ae000068bbea969c10f0a105627cd480f7162c38b799b85.json  query-7d2da2628256fec01482d659f7db9fdc9e702a9d14b68c8492eace2e9bc6dc0d.json  query-7ede5e9d33c797efe2c647c1642c9d5d65eb4917f5ac322390ed24365f35c46f.json  query-8429adbf59902c66267046f7198c3efa741646ac88298b257bb45a198b749a20.json  query-88ddf2d135c10daf95afb646b3bb04dbf356601147ced8150b5c5290e15c0aed.json  query-90fc0c90ec93275b010c1e3be02fa1d94ea0fbe00376eb9a941c5a028958cb54.json  query-9b599c7e4eb91f5ff794abaea5bbd352c5d77ebecbb5564d9647b216712915ab.json  query-a10f7f42368292041673cc68792b0291a1d28f2b95607e1c925fb3bf79aca82a.json  query-a27884ca16032266f3f2ada311d372b741da189f9ee6bc4f81a97f064cee231e.json  query-a4ab3efca722b254e6d0a0a04170f28ea8165fe59a89a1f31b676cfd04a52f6b.json  query-a997e7db641416e7438f0679d67e87c9e27fe8691c17b9ff4ac32905e5b27f6f.json  query-b1340c38713326e908b5c562896cf0d165575c2991926a87827e28ebb936f074.json  query-b3e7ad3f7ada2cb9f322d646bc30402957a8706681cf52776f8693a689690025.json  query-b44c6db5d18e1c38948c6fed14e5246a1fd0a216e305d2d30f19cfcedfd97303.json  query-d13fb489a9941f7c3487d54e5ff4026fbade0b66706a62474c22ae0cc17a9be5.json  query-d347ef94a1993ef9c109b4a6925d5c90a77fa876046a6b16332430bba3f6b6bf.json  query-d3bdbb461ad6f3c29045c31c1f8120991c78bc76229ec8fc34e0cb5253867c0b.json  query-dc6e5be6d44c16ea128d04ed7cf21f40ef3e07dbdbe54a63a3e2fffa91f56202.json  query-e49fbc58f38efe5b2a3b82cf7287858c9eccd407063e7231755cb9b8417d3dc4.json  query-ed0d07321bb889435700a794398b4fb65a7e776cf9111f46cc3889a15035a0c5.json  query-f2ecb64fff88353abb4487e21a79f4f3c653db2bc377ce92d2c74ffae124d22c.json  query-f2f978b135b2d5a2aa96724f87f1fc70dc508ff6776a668c15a8d54cad5eb7a8.json
.zellij/: servers.kdl
admin-site/: .gitignore  Cargo.toml  input.css  package.json  pnpm-lock.yaml
admin-site/src/: app.rs  lib.rs  main.rs  state.rs
admin-site/src/routes/: mod.rs  not_found.rs  service_types.rs
admin-site/src/routes/auth/: flow.rs  mod.rs  ui.rs
admin-site/src/routes/database/: mod.rs  tables.rs
admin-site/src/routes/database/tables/: blog_tag.rs  mod.rs
admin-site/src/routes/database/tables/blog/: create.rs  mod.rs
admin-site/src/routes/database/tables/blog_tag/: create.rs  mod.rs
admin-site/src/ui/: back_button.rs  loading.rs  mod.rs  nav_bar.rs  theme_toggle.rs
admin-site/src/ui/primitive/: button.rs  card.rs  form.rs  input.rs  mod.rs  table.rs  textarea.rs
admin-site/src/utils/: error.rs  mod.rs  pagination.rs  router.rs
admin-site/src/utils/hooks/: mod.rs  use_theme.rs
cron-ddns/: Cargo.toml
cron-ddns/src/: lib.rs  main.rs
cron-ddns/src/crons/: mod.rs
cron-ddns/src/crons/cloudflare/: mod.rs
cron-ddns/src/utils/: error.rs  health.rs
data-shapes/: Cargo.toml
data-shapes/src/: lib.rs
database/: Cargo.toml
database/migrations/: 20250528063847_init_schema.down.sql  20250528063847_init_schema.up.sql  20250609101327_init_schema.up.sql  20250612040937_init.down.sql  20250612040937_init.up.sql
database/src/: lib.rs  main.rs
database/src/table/: blog.rs  mod.rs
database/src/table/blog_meta/: mod.rs
database/src/table/blog_tag/: mod.rs
database/src/utils/: common_structs.rs  error.rs  mod.rs  time.rs
load-env/: Cargo.toml
load-env/src/: lib.rs
load-env/src/schema/: mod.rs
load-env/src/utils/: errors.rs  filename_resolve.rs  mod.rs  path.rs
proto-build/: Cargo.toml
proto-build-help/: Cargo.toml
proto-build-help/src/: lib.rs
proto-build/src/: lib.rs
proto-types/: Cargo.toml  build.rs
proto-types/src/: lib.rs
proto-types/src/derived/: blog.rs
proto-types/src/impls/: mod.rs
vps-api/: Cargo.toml  Dockerfile
vps-api/src/: main.rs
vps-api/src/handler/: error.rs
vps-api/src/routes/: health.rs  mod.rs  rpcgreet.rs
vps-api/src/routes/blog/: blog_meta.rs  blog_tag.rs  mod.rs  tag.rs
vps-api/src/routes/gacha/: mod.rs
vps-api/src/routes/gacha/pull_simulation/: mod.rs  types.rs
vps-api/src/utils/: error.rs
vps-do/: Cargo.toml
vps-do/assets/: cli.excalidraw
vps-do/src/: main.rs
vps-do/src/actions/: mod.rs  remote_repo.rs  repo_list.rs
vps-do/src/actions/repo/: build.rs  clone.rs  mod.rs  pull.rs
vps-do/src/actions/service/: build.rs  deploy.rs  list.rs  mod.rs
vps-do/src/cli/repo/: mod.rs
vps-do/src/utils/: args.rs  config_parse.rs  mod.rs
vps-rpc/: Cargo.toml  Dockerfile  build.rs
vps-rpc/proto/: service.proto
vps-rpc/proto/types/: build.proto
vps-rpc/src/: layer.rs  lib.rs  main.rs  rpc.rs
vps-rpc/src/services/: greeter.rs  health.rs  mod.rs
vps-rpc/src/services/actions/: mod.rs  repo_list.rs
vps-rpc/src/services/actions/repo/: build.rs  clone.rs  mod.rs  pull.rs
vps-rpc/src/services/actions/service/: build.rs  deploy.rs  mod.rs
vps-rpc/src/services/database/: blog_tag.rs  mod.rs
vps-rpc/src/services/database/blog/: meta.rs  mod.rs  tag.rs
vps-rpc/src/utils/: error.rs  mod.rs
