# TODO: update meta

[workspace]
members = [
  "vps-rpc",
  "vps-api",
  "proto-build",
  "load-env",
  "database",
  "proto-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Othi <mnpq.raven@gmail.com>"]
description = "VPS command tools"
documentation = "https://github.com/mnpqraven/vps"
