[workspace]
members = [
  "admin-site",
  "cron-ddns",
  "database",
  "load-env",
  "proto-build-help",
  "proto-types",
  "vps-api",
  "vps-rpc",
]
resolver = "2"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.1.0"
authors = ["Othi <mnpq.raven@gmail.com>"]
description = "VPS command tools"
documentation = "https://github.com/mnpqraven/vps"

[workspace.dependencies]
leptos_axum = "0.8.7"
leptos = { version = "0.8.14", features = ["nightly"] }
leptos_router = { version = "0.8.10", features = ["nightly"] }
leptos_meta = "0.8.5"
wasm-bindgen = "=0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.45.0", features = ["full"] }
ts-rs = "11.1.0"
axum = "0.8.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
