[package]
name = "cron-ddns"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
apalis = { version = "0.7.2", features = ["tracing"] }
apalis-cron = "0.7.2"
chrono = "0.4.41"
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { version = "0.5.2", features = ["load-shed"] }
tracing.workspace = true
tracing-subscriber.workspace = true
