[package]
name = "cron-ddns"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
apalis = { version = "0.7.2", features = ["tracing"] }
apalis-cron = "0.7.2"
chrono = "0.4.41"
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { version = "0.5.2", features = ["load-shed"] }
load-env = { path = "../load-env" }
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
tonic.workspace = true
proto-types = { path = "../proto-types" }
futures = "0.3.31"
