[package]
name = "database"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
load-env = { path = "../load-env" }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "json",
] }
