[package]
name = "database"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio.workspace = true
tonic = "0.13.1"
load-env = { path = "../load-env" }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "time",
  "json",
] }
thiserror.workspace = true
anyhow.workspace = true
uuid = { version = "1.17.0", features = ["v7"] }
proto-types = { path = "../proto-types" }
chrono = "0.4.41"
