[package]
name = "proto-types"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
prost = "0.13.5"
tonic = "0.13.1"
tonic-reflection = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
utoipa = "5.3.1"

[build-dependencies]
tonic-build = "0.13.1"
proto-build = { path = "../proto-build" }
