[package]
name = "proto-types"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
prost = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.13.1", default-features = false, features = [
  "codegen",
  "prost",
] }
serde = { version = "1.0.219", features = ["derive"] }
utoipa = "5.3.1"
ts-rs.workspace = true

[build-dependencies]
tonic-build = { version = "0.13.1", default-features = false, features = [
  "prost",
] }
proto-build-help = { path = "../proto-build-help" }

[features]
default = ["transport"]
# wasm can't compile tramsport code
# @see https://github.com/hyperium/tonic/issues/1538
transport = ["tonic/transport", "tonic-build/transport"]
