[package]
name = "vps-api"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio.workspace = true
tonic = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
proto-types = { path = "../proto-types" }
vps-rpc = { path = "../vps-rpc" }
thiserror.workspace = true
