[package]
name = "vps-do"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tonic = "0.12.3"
vps-rpc = { path = "../vps-rpc" }
data-shapes = { path = "../data-shapes" }
