[package]
name = "vps-rpc"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
default-run = "vps-rpc"

[dependencies]
prost = "0.13.5"
tokio.workspace = true
proto-types = { path = "../proto-types" }
clap = { version = "4.5.32", features = ["derive"] }
serde.workspace = true
toml = "0.8.20"
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6.4", features = ["cors"] }
load-env = { path = "../load-env" }
database = { path = "../database" }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "json",
] }
tonic.workspace = true
tonic-reflection.workspace = true
tonic-web.workspace = true
tower = "0.5.2"
http = "1.3.1"
utoipa = "5.3.1"
thiserror.workspace = true
anyhow.workspace = true
